--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/form": "^6.0.16",
     "@mantine/hooks": "^6.0.16",
     "@mantine/next": "^6.0.16",
+    "@mantine/notifications": "^6.0.16",
     "@tabler/icons-react": "^2.24.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
@@ -28,6 +29,7 @@
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
